--- a/styles/global.css
+++ b/styles/global.css
@@ -2,10 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
 }
 
 body {
   background-color: var(--shape-background);
+  margin-inline: auto;
 }
 
 :root {
